--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -56,7 +56,7 @@
       </nav>
     </header>
 
-    <main class="container py-4">
+    <main class="container">
       <section class="row g-4">
         <div class="col-12 col-lg-6">
           <div class="card h-100">
