--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -36,7 +36,7 @@
                     <!-- <div class="navbar-nav"> -->
                     <ul class="navbar-nav">
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./index.html">Home</a>
+                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" aria-current="page" href="./src/pages/login/index.html">Sign
