--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -44,7 +44,7 @@
                             <a class="navbar-nav__link" aria-current="page" href="./../signup/index.html">Sign up</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./index.html">Bookings</a>
+                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Bookings</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" aria-current="page" href="./../events/index.html">Events</a>
@@ -64,7 +64,7 @@
             </section>
         </div>
         <div class="booked">
-            <h1 class="booked__title">My Booked Events</h1>
+            <h2 class="booked__title">My Booked Events</h2>
             <section class="">
                 <div class="row booked__grid">
 
