--- a/frontend_eventura/src/pages/signup/index.html
+++ b/frontend_eventura/src/pages/signup/index.html
@@ -41,7 +41,7 @@
                                 in</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./index.html">Sign up</a>
+                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Sign up</a>
                         </li>
                         <li class="navbar-nav__list">
                             <a class="navbar-nav__link" aria-current="page"
