--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -90,7 +90,7 @@
                                     class="navbar-nav__link"
                                     aria-current="page"
                                     href="./src/pages/events/index.html"
-                                    >Events</a
+                                    >Event Planner</a
                                 >
                             </li>
                         </ul>
