--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -89,7 +89,7 @@
                                     class="navbar-nav__link"
                                     aria-current="page"
                                     href="./../events/index.html"
-                                    >Events</a
+                                    >Event Planner</a
                                 >
                             </li>
                         </ul>
