--- a/frontend_eventura/src/pages/profile/index.html
+++ b/frontend_eventura/src/pages/profile/index.html
@@ -88,7 +88,7 @@
                                     class="navbar-nav__link"
                                     aria-current="page"
                                     href="./../events/index.html"
-                                    >Events</a
+                                    >Event Planner</a
                                 >
                             </li>
                         </ul>
