--- a/frontend_eventura/src/pages/events/index.html
+++ b/frontend_eventura/src/pages/events/index.html
@@ -36,19 +36,19 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav">
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" aria-current="page" href="./../../../index.html">Home</a>
+                <a class="navbar-nav__link" href="./../../../index.html">Home</a>
               </li>
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" aria-current="page" href="./../../pages/login/index.html">Sign in</a>
+                <a class="navbar-nav__link" href="./../../pages/login/index.html">Sign in</a>
               </li>
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" aria-current="page" href="./../../pages/signup/index.html">Sign up</a>
+                <a class="navbar-nav__link" href="./../../pages/signup/index.html">Sign up</a>
               </li>
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" aria-current="page" href="./../../pages/bookings/index.html">Bookings</a>
+                <a class="navbar-nav__link" href="./../../pages/bookings/index.html">Bookings</a>
               </li>
               <li class="navbar-nav__list">
-                <a class="navbar-nav__link" aria-current="page" href="./index.html">Event Planner</a>
+                <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Event Planner</a>
               </li>
             </ul>
           </div>
