--- a/frontend_eventura/src/pages/login/index.html
+++ b/frontend_eventura/src/pages/login/index.html
@@ -34,21 +34,21 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav">
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../../../index.html">Home</a>
+                            <a class="navbar-nav__link" href="./../../../index.html">Home</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page" href="./index.html">Sign in</a>
+                            <a class="navbar-nav__link navbar-nav__link--active" aria-current="page"
+                                href="./index.html">Sign in</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../../pages/signup/index.html">Sign
+                            <a class="navbar-nav__link" href="./../../pages/signup/index.html">Sign
                                 up</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page"
-                                href="./../../pages/bookings/index.html">Bookings</a>
+                            <a class="navbar-nav__link" href="./../../pages/bookings/index.html">Bookings</a>
                         </li>
                         <li class="navbar-nav__list">
-                            <a class="navbar-nav__link" aria-current="page" href="./../events/index.html">Event Planner</a>
+                            <a class="navbar-nav__link" href="./../events/index.html">Event Planner</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
     <main class="login">
         <!-- Sign in section -->
         <section class="p-5 w-100">
-            <div >
+            <div>
                 <div>
                     <h1 class="text-center">Sign in</h1>
                 </div>
