--- a/frontend_eventura/src/pages/bookings/index.html
+++ b/frontend_eventura/src/pages/bookings/index.html
@@ -72,14 +72,7 @@
             <h2 class="booked__title">My Booked Events</h2>
             <section class="">
                 <div class="row booked__grid">
-                    <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2 w-100">
-                        <article class="event-card h-100">
-                            <h3 class="event-card__name">${event.eventName}</h3>
-                            <p class="event-card__date">${formattedDate}</p>
-                            <p class="event-card__location">${event.address.postcode}</p>
-                            <button class="small-button" data-id="${event.id}">Book</button>
-                        </article>
-                    </div>
+                    <!-- Event cards will be injected here using Typescript -->
                 </div>
             </section>
         </div>
