--- a/frontend_eventura/index.html
+++ b/frontend_eventura/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FILL THIS OUT-----------" />
-    <title>Eventura | FILL THIS OUT</title>
+    <meta name="description" content="Home of exciting events and adventures, book your next one now!" />
+    <title>Eventura | Home</title>
     <!-- Google fonts import -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
